<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobile.memoriavirtual.usp.mvmobile.Fragment.Formulario.FormInformacoes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp"
            android:gravity="center">

            <TextView
                style="@style/TextView"
                android:text="@string/cadastro_assuntos"/>
            <EditText
                android:id="@id/cadastro_assuntos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18sp"/>

            <TextView
                style="@style/TextView"
                android:text="@string/cadastro_descritores"/>
            <EditText
                android:id="@id/cadastro_descritores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18sp"/>

            <TextView
                style="@style/TextView"
                android:text="@string/cadastro_fontes_informacao"/>
            <EditText
                android:id="@id/cadastro_fontes_informacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18sp"/>

            <TextView
                style="@style/TextView"
                android:text="@string/cadastro_pesquisadores"/>
            <EditText
                android:id="@id/cadastro_pesquisadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18sp"/>

            <TextView
                style="@style/TextView"
                android:text="@string/cadastro_relacionar_outros_bens"/>
            <EditText
                android:id="@id/cadastro_relacionar_outros_bens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18sp"/>

            <Button
                android:background="@drawable/border_filled_button"
                android:textColor="@android:color/white"
                android:text="@string/cadastro_add_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:textSize="18sp"
                android:onClick="onAddButtonClick"/>
            />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
